--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
           <use xlink:href="images/sprite.svg#icon-logo"></use>
         </svg>
       </a>
-      <button class="header__catalog-btn" type="button">
+      <button id="burgerBtn" class="header__catalog-btn" type="button">
         <svg class="header__logo" width="24" height="24" aria-hidden="true">
           <use xlink:href="images/sprite.svg#icon-menu"></use>
         </svg>
@@ -121,11 +121,11 @@
     </div>
 
     <!-- Catalog -->
-    <div class="header__catalog main-menu">
+    <div id="mainMenu" class="header__catalog main-menu">
       <div class="main-menu__wrapper">
         <div class="main-menu__heading">
           <h2 class="main-menu__title">Категории товаров</h2>
-          <button class="main-menu__close" type="button">
+          <button id="closeMenuBtn" class="main-menu__close" type="button">
             <svg class="main-menu__icon" width="24" height="24" aria-hidden="true">
               <use xlink:href="images/sprite.svg#icon-close"></use>
             </svg>
