--- a/catalog.html
+++ b/catalog.html
@@ -27,18 +27,18 @@
       </button>
 
       <!-- Location -->
-      <div class="header__location location">
+      <div  class="header__location location">
         <svg class="location__icon" width="24" height="24" aria-hidden="true">
-          <use xlink:href="images/sprite.svg#icon-location"></use>
+          <use href="images/sprite.svg#icon-location"></use>
         </svg>
         <span class="location__text">Ваш город:</span>
-        <button class="location__city" type="button">
-          <span class="location__city-name">Оренбург</span>
+        <button id="changeLocationBtn" class="location__city location__city" type="button">
+          <span id="currentLocationText" class="location__city-name">Оренбург</span>
           <svg class="location__arrow" width="9" height="6" aria-hidden="true">
-            <use xlink:href="images/sprite.svg#icon-arrow-bottom"></use>
+            <use href="images/sprite.svg#icon-arrow-bottom"></use>
           </svg>
         </button>
-        <ul class="location__sublist">
+        <ul id="locationList" class="location__sublist">
           <li class="location__subitem">
             <button class="location__sublink" type="button">Москва</button>
           </li>
